src/objects/C501_VFW_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>C501_VFW_Setting_Choice1_Redirect__c</fullName>
        <label>C501 VFW Setting Choice1 Redirect</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>C501_VFW_Setting_Choice2_Redirect__c</fullName>
        <label>C501 VFW Setting Choice2 Redirect</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>C501_VFW_Setting_CreateLead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Create Lead or Create Account/Contact</description>
        <label>C501 VFW Setting Create Lead</label>
        <type>Checkbox</type>
    </fields>
    <label>C501 VFW Settings</label>
</CustomObject>